--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,11 @@
-name: publish to nuget
+name: Publish to Nuget
 on:
   push:
     branches:
       - master
 jobs:
   publish:
-    name: build, pack & publish
+    name: Build, Pack & Publish
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -15,10 +15,8 @@ jobs:
         with:
           dotnet-version: 6.0.x
 
-      - name: publish on version change
-        id: publish_nuget
-        uses: brandedoutcast/publish-nuget@v2
+      - name: Publish NuGet
+        uses: brandedoutcast/publish-nuget@v2.5.5
         with:
           PROJECT_FILE_PATH: Fibonacci/Fibonacci.csproj
-          BUILD_CONFIGURATION: Release
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
