--- a/.github/workflows/dotnet-build-test-publish.yml
+++ b/.github/workflows/dotnet-build-test-publish.yml
@@ -17,9 +17,7 @@ jobs:
       run: dotnet build --no-restore --configuration Release
     - name: dotnet test
       run: dotnet test --no-build --configuration Release --verbosity normal --list-tests --blame
-    - name: dotnet pack
-      run: dotnet pack Fibonacci/Fibonacci.csproj --configuration Release --no-build
     - name: dotnet nuget push to NuGet
-      run: dotnet nuget push *.nupkg --api-key ${{secrets.FIBONACCI_NUGET}} --source "https://api.nuget.org/v3/index.json" --skip-duplicate
+      run: dotnet nuget push **.nupkg --api-key ${{secrets.FIBONACCI_NUGET}} --source "https://api.nuget.org/v3/index.json" --skip-duplicate
     - name: dotnet nuget push to GitHub
-      run: dotnet nuget push *.nupkg --api-key ${{secrets.FIBONACCI_GITHUB}} --source "https://nuget.pkg.github.com/lyndychivs/index.json" --skip-duplicate
+      run: dotnet nuget push **.nupkg --api-key ${{secrets.FIBONACCI_GITHUB}} --source "https://nuget.pkg.github.com/lyndychivs/index.json" --skip-duplicate
