--- a/Fibonacci/Fibonacci.csproj
+++ b/Fibonacci/Fibonacci.csproj
@@ -6,9 +6,9 @@
     <ErrorReport>prompt</ErrorReport>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>Fibonacci</Title>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
     <Authors>lyndychivs</Authors>
-    <Description>A simple library for generating the Fibonacci sequence.</Description>
+    <Description>A simple library for generating the Fibonacci sequence using Iterative or Recursive methods.</Description>
     <PackageProjectUrl>https://github.com/lyndychivs/Fibonacci</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/lyndychivs/Fibonacci</RepositoryUrl>
