--- a/Fibonacci/Fibonacci.csproj
+++ b/Fibonacci/Fibonacci.csproj
@@ -38,7 +38,7 @@
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="Resouces\Fibonacci.png" />
+    <None Remove="Resources\Fibonacci.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md">
@@ -47,7 +47,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resouces\Fibonacci.png">
+    <EmbeddedResource Include="Resources\Fibonacci.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </EmbeddedResource>
